
plugins {
    id 'java'
    id 'idea'
    id 'eclipse'
    id 'net.minecraftforge.gradle' version '7.0.17'
}

abstract class ReleaseBundleTask extends DefaultTask {
    @InputFiles
    @PathSensitive(PathSensitivity.NAME_ONLY)
    abstract ConfigurableFileCollection getArtifacts()

    @InputFile
    abstract RegularFileProperty getLicenseFile()

    @InputFile
    abstract RegularFileProperty getChangelogFile()

    @OutputDirectory
    abstract DirectoryProperty getDestinationDirectory()

    @TaskAction
    void createBundle() {
        def destination = destinationDirectory.get().asFile.toPath()
        java.nio.file.Files.createDirectories(destination)

        [licenseFile.get().asFile, changelogFile.get().asFile].each { source ->
            java.nio.file.Files.copy(
                source.toPath(),
                destination.resolve(source.name),
                java.nio.file.StandardCopyOption.REPLACE_EXISTING
            )
        }

        artifacts.files.each { artifact ->
            java.nio.file.Files.copy(
                artifact.toPath(),
                destination.resolve(artifact.name),
                java.nio.file.StandardCopyOption.REPLACE_EXISTING
            )

            def digest = java.security.MessageDigest.getInstance('SHA-256')
            artifact.withInputStream { input ->
                def buffer = new byte[8192]
                int bytesRead
                while ((bytesRead = input.read(buffer)) != -1) {
                    digest.update(buffer, 0, bytesRead)
                }
            }
            def checksum = java.util.HexFormat.of().withUpperCase().formatHex(digest.digest())
            java.nio.file.Files.writeString(
                destination.resolve("${artifact.name}.sha256"),
                "${checksum}  ${artifact.name}${System.lineSeparator()}",
                java.nio.charset.StandardCharsets.UTF_8
            )
        }
    }
}

version = '1.5.1'
group = 'com.kadamitas.warlockery'

java {
    toolchain.languageVersion = JavaLanguageVersion.of(25)
    withSourcesJar()
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

tasks.named('processResources', ProcessResources) {
    exclude 'assets/warlockery/icon.png'
    from('src/main/resources/assets/warlockery/icon.png') {
        into ''
        rename { 'warlockery-icon.png' }
    }
}

sourceSets.test.compileClasspath += sourceSets.main.output
sourceSets.test.runtimeClasspath += sourceSets.main.output
def forgeMainClasses = layout.buildDirectory.dir('sourceSets/main')
sourceSets.test.compileClasspath += files(forgeMainClasses)
sourceSets.test.runtimeClasspath += files(forgeMainClasses)

minecraft {
    runs {
        configureEach {
            workingDir = layout.projectDirectory.dir('run')

            systemProperty 'eventbus.api.strictRuntimeChecks', 'true'
            systemProperty 'forge.enabledGameTestNamespaces', 'warlockery'
        }

        register('client')

        register('server') {
            args '--nogui'
        }

        register('gameTestServer')

        register('data') {
            workingDir = layout.projectDirectory.dir('run-data')

            args '--mod', 'warlockery', '--all', '--output', layout.projectDirectory.dir('src/generated/resources'), '--existing', layout.projectDirectory.dir('src/main/resources')
        }
    }
}

repositories {
    minecraft.mavenizer(it)
    maven fg.forgeMaven
    maven fg.minecraftLibsMaven
    maven {
        url = 'https://maven.blamejared.com'
        content { includeGroup 'mezz.jei' }
    }
    mavenCentral()
}

dependencies {
    implementation minecraft.dependency('net.minecraftforge:forge:26.2-65.1.2')
    compileOnly 'mezz.jei:jei-26.2-common-api:30.15.0.104'
    annotationProcessor 'net.minecraftforge:eventbus-validator:7.0.5'
    testImplementation platform('org.junit:junit-bom:6.1.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test', Test) {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
    }
}

tasks.register('bakeCreatureTextures', JavaExec) {
    group = 'warlockery assets'
    description = 'Projects approved creature concept views onto the dedicated models real UV faces.'
    dependsOn tasks.named('testClasses')
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.kadamitas.warlockery.client.texture.ConceptTextureBatchTool'
    if (project.hasProperty('creature')) {
        args '--entity', project.property('creature')
    }
    if (project.hasProperty('creatureTextureOutput')) {
        args '--output-root', project.property('creatureTextureOutput')
    }
    if (project.hasProperty('installCreatureTextures')) {
        args '--install'
    }
    if (project.hasProperty('checkCreatureTextures')) {
        args '--check'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['-Xlint:deprecation', '-Xlint:unchecked'])
}

tasks.withType(AbstractArchiveTask).configureEach {
    preserveFileTimestamps = false
    reproducibleFileOrder = true
}

tasks.withType(Jar).configureEach {
    from(rootProject.file('LICENSE')) {
        into 'META-INF'
        rename { 'LICENSE-Warlockery.txt' }
    }
    from(rootProject.file('changelog.txt')) {
        into 'META-INF'
        rename { 'CHANGELOG-Warlockery.txt' }
    }
}

tasks.named('jar', Jar) {
    manifest {
        attributes(
            'Automatic-Module-Name': 'com.kadamitas.warlockery',
            'Specification-Title': 'Warlockery',
            'Specification-Vendor': 'Kadamitas',
            'Specification-Version': project.version,
            'Implementation-Title': 'Warlockery',
            'Implementation-Vendor': 'Kadamitas',
            'Implementation-Version': project.version,
            'Implementation-URL': 'https://github.com/Kadamitas/Warlockery'
        )
    }
}

def releaseDirectory = layout.projectDirectory.dir("release/${project.version}")

tasks.register('releaseBundle', ReleaseBundleTask) {
    group = 'build'
    description = 'Collects release artifacts and SHA-256 checksums.'
    dependsOn tasks.named('build')
    artifacts.from(tasks.named('jar').flatMap { it.archiveFile })
    artifacts.from(tasks.named('sourcesJar').flatMap { it.archiveFile })
    licenseFile.set(layout.projectDirectory.file('LICENSE'))
    changelogFile.set(layout.projectDirectory.file('changelog.txt'))
    destinationDirectory.set(releaseDirectory)
}
